updated swagger to include new endpoints, modified existing endpoints as well; added morgan as a dependency
